--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -3,9 +3,15 @@
 <html>
     <head>
         <title>@title</title>
+
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.min.css")"> 
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+
         <script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script>
+        <script type="text/javascript" src="@routes.Assets.at("javascripts/jquery.min.js")"></script>
+        <script type="text/javascript" src="@routes.Assets.at("javascripts/bootstrap.min.js")"></script>
+
         <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
         <script type="text/javascript" 
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANnhvOGTJLsBhCfLVzZXE4ZOyQ_CrsQjE&libraries=places"> </script>
@@ -100,6 +106,6 @@
         </script>
     </head>
     <body>
-        @content
+          @content
     </body>
 </html>
