--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,27 +1,32 @@
 a {
-  text-decoration: none;
+  text-decoration: none !important;
 }
 a:visited {
-  color: white;
+  text-decoration: none !important;
 }
 a:hover {
-  text-decoration: none;
+  text-decoration: none !important;
 }
 header {
   margin-top: 60px;
 }
 h1 {
-  color: white;
-  text-align: center;
-  font-size: 400%;
+  color: white !important;
+  text-align: center !important;
+  font-size: 400% !important;
 }
 body
  {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans', sans-serif !important;
   margin-left: auto;
   margin-right: auto;
-  background-color: #413e4a;
+  background-color: #413e4a !important;
   text-align: center;
+}
+.container {
+  border: 1px solid black;
+  background-color: #413e4a;
+  width: 100%;
 }
 input {
     font-family: 'Open Sans', sans-serif;
@@ -86,7 +91,7 @@ button {
   margin-right: auto;
   margin-top: 30px;*/
   padding: 30px;
-  width: 370px;
+  width: 400px;
   /*border-radius: 4px;
   border-width: 1px;
   border-color:  #D4D6D9;
@@ -141,7 +146,7 @@ input {
   border-width: 1px;
   border-color:  #b7b7b7;
   border-style: solid;
-  width: 360px;
+  width: 100%;
   height: 35px;
   padding: 5px;
 }
@@ -150,7 +155,7 @@ textarea {
   border-width: 1px;
   border-color:  #b7b7b7;
   border-style: solid;
-  width: 360px;
+  width: 100%;
   padding: 5px;
   font-family: 'Open Sans', sans-serif;
   margin-top: 5px;
@@ -169,7 +174,7 @@ option {
   width: 100%;
 }
 input[type="file"] {
-  height: 21px;
+ /* height: 21px;*/
 }
 input[type=checkbox] {
   width: 20px;
