--- a/app/views/register.scala.html
+++ b/app/views/register.scala.html
@@ -37,7 +37,7 @@
         <input type="profession" name="profession" placeholder="Zanimanje">
       </div>
       <div class="field">
-        <button type="submit">Register</button>
+        <button type="submit" id="submit-button">Register</button>
       </div>
   }
 }
