--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -21,7 +21,7 @@
         <input type="password" name="password" placeholder="Šifra">
       </div>
       <div class="field">
-        <button type="submit">Login</button>
+        <button type="submit" id="submit-button">Login</button>
       </div>
     </div>
   }
