--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -21,7 +21,14 @@ body
   margin-left: auto;
   margin-right: auto;
   background-color: #413e4a !important;
+  background-color: white !important;
   text-align: center;
+}
+#table {
+  background: white;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
 }
 .container {
   border: 1px solid black;
@@ -31,10 +38,6 @@ body
 input {
     font-family: 'Open Sans', sans-serif;
     margin-top: 5px;
-}
-button {
-      font-family: 'Open Sans', sans-serif;
- text-transform: uppercase;
 }
 #map-canvas {
   margin-top: 10px;
@@ -110,7 +113,9 @@ button {
   margin-top: 30px;
 }
 
-button[type="submit"] {
+#submit-button {
+  font-family: 'Open Sans', sans-serif;
+  text-transform: uppercase;
   margin-top: 20px;
   margin-left: 215px;
   border-radius: 4px;
@@ -125,7 +130,7 @@ button[type="submit"] {
   border-style: solid;
   cursor: pointer;
 }
-button[type="submit"]:hover {
+#submit-button:hover {
   background-color: #6D7F91;
   border-color: #6D7F91;
 }
