--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,56 +1,68 @@
-@(user: String, form: Form[Application.NewObject])
+@(user: String, role: String, form: Form[Application.NewObject], user_name: String)
 @main("Home", user) {
-	@if(user != null) {
-    <div id="welcome-user"> 
-        Zdravo, @user &nbsp&nbsp
-        <a href="@routes.Application.logout"> Odjava </a>
-    </div>
-	}
-  @if(user == null) {
-      <div id="user-options">
-          <header>
-              <h1> Civilna zaštita </h1>
-          </header>
-          <a href="@routes.Application.register"> Registracija </a>
-          <a href="@routes.Application.login"> Prijava </a>
+  <div id="frame-user">
+  	@if(user != null) {
+      <div id="welcome-user"> 
+          Zdravo, @user_name! &nbsp&nbsp
+          <a href="@routes.Application.logout"> Odjava </a>
       </div>
-  }
-  @if(user != null) {
-      @helper.form(routes.Application.addObject, 'enctype -> "multipart/form-data") {
-      <div id="section_title" style="text-align: center;"> Novi objekat </div>
-      <div id="form-frame">
-        <div class="input_form">
-          <div class="field">
-            <label for="location"> Lokacija </label>
-            <input id="pac-input" class="controls" type="text" name="location" placeholder="Pretraga">
-            <div id="map-canvas"></div>
-          </div>          
+  	}
+    @if(user == null) {
+        <div id="user-options">
+            <header>
+                <h1> Civilna zaštita </h1>
+            </header>
+            <div id="slika" style="display:inline-block;margin-right:30px;">
+              <img src="@routes.Assets.at("images/home_image.png")">
+            </div>
+            <div id="home_desc" style="width:200px; color:white; text-align: justify; display:inline-block;">
+              Pomozite nam tako što ćete unijeti informacije o oštećenim objektima. Za unos objekata je neophodno registrovati se. Hvala.
+            </div>
+            <blockquote "blockquote-reverse" style="margin-top: 30px;">
+              <p style="color: white;">The best way to find yourself is to lose yourself in the service of others.</p>
+              <footer>Mahatma Gandhi</footer>
+            </blockquote>
+            <a href="@routes.Application.register"> Registracija </a>
+            <a href="@routes.Application.login"> Prijava </a>
         </div>
-        <div class="input_form">
-          <div class="field">
-            <label for="title"> Naziv </label>
-            <input type="text" name="title" placeholder="Npr. zgrada, kuća.. ">
+    }
+    @if(user != null) {
+        @helper.form(routes.Application.addObject, 'enctype -> "multipart/form-data") {
+        <div id="section_title" style="text-align: center;"> Novi objekat </div>
+        <div id="form-frame">
+          <div class="input_form">
+            <div class="field">
+              <label for="location"> Lokacija </label>
+              <input id="pac-input" class="controls" type="text" name="location" placeholder="Pretraga">
+              <div id="map-canvas"></div>
+            </div>          
           </div>
-          <div class="field">
-            <label for="description"> Opis </label>
-            <textarea name="description"cols="30" rows="7" placeholder="Opis objekta"></textarea>
+          <div class="input_form">
+            <div class="field">
+              <label for="title"> Naziv </label>
+              <input type="text" name="title" placeholder="Npr. zgrada, kuća.. ">
+            </div>
+            <div class="field">
+              <label for="description"> Opis </label>
+              <textarea name="description"cols="30" rows="7" placeholder="Opis objekta"></textarea>
+            </div>
+            <div class="field">
+              <label for="typeOfDisaster"> Tip nepogode </label>
+              <select name="typeOfDisaster">
+                <option value="Zemljotres">Zemljotres</option>
+                <option value="Poplava">Poplava</option>
+                <option value="Požar">Požar</option>
+              </select>
+            </div>
+            <div class="field">
+              <label for="images"> Slike </label>
+              <input type="file" id="images" name="image">
+            </div>
+            <div class="field">
+              <button type="submit" id="submit-button">Dodaj</button>
+            </div>
           </div>
-          <div class="field">
-            <label for="typeOfDisaster"> Tip nepogode </label>
-            <select name="typeOfDisaster">
-              <option value="Zemljotres">Zemljotres</option>
-              <option value="Poplava">Poplava</option>
-              <option value="Pozar">Požar</option>
-            </select>
-          </div>
-          <div class="field">
-            <label for="images"> Slike </label>
-            <input type="file" id="images" name="image">
-          </div>
-          <div class="field">
-            <button type="submit" id="submit-button">Dodaj</button>
-          </div>
-        </div>
+    }
   }
-}
+  </div>
 }
