--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -56,7 +56,7 @@
             </div>
             <div class="field">
               <label for="images"> Slike </label>
-              <input type="file" id="images" name="image">
+              <input type="file" id="images" name="image" multiple>
             </div>
             <div class="field">
               <button type="submit" id="submit-button">Dodaj</button>
