--- a/app/views/showObject.scala.html
+++ b/app/views/showObject.scala.html
@@ -1,4 +1,4 @@
-@(user: String, role: String, objekat: Objekat, stanja: List[StanjeObjekta], hitnosti: List[NivoHitnosti],  form: Form[Application.EditObject])
+@(user: String, role: String, objekat: Objekat, stanja: List[StanjeObjekta], hitnosti: List[NivoHitnosti],  form: Form[Application.EditObject], slike: List[SlikaObjekta])
 @main("Objekat", user, role) {
 	@helper.form(routes.Application.updateObject(objekat.getId())) {
 	 <div id="section_title" style="text-align: center; color: #566473;"> @objekat.getNaziv() </div>
@@ -43,6 +43,14 @@
 	                  }
 	                }
 	              </select>
+            </div>
+            <div class="field">
+                <strong> Slike </strong>
+                <div id="images">
+                  @for(s <- slike) {
+                    <a href="/assets/images/@s.getNaziv()"><img src="/assets/images/@s.getNaziv()" style="height: 50px;"></a>
+                  }
+                </div>
             </div>
             <div class="field">
               <button type="submit" id="submit-button">Ažuriraj</button>
