--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -123,7 +123,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
                 <li><a href="@routes.Application.adminHome()">Početna </a></li>
-                <li><a href="#">Objekti</a></li>
+                <li><a href="@routes.Application.objects()">Objekti</a></li>
               </ul>
               <form class="navbar-form navbar-left" role="search">
                 <div class="form-group">
