--- a/app/views/showObject.scala.html
+++ b/app/views/showObject.scala.html
@@ -118,6 +118,9 @@
             <div class="field">
               <button type="submit" id="submit-button">Ažuriraj</button>
             </div>
-     	</div>
+           <!-- <div class="field">
+              <button type="submit" id="submit-button"  style="margin-right: 10px;" href="@routes.Application.deleteObject(objekat.getId())">Obriši</button>
+            </div>-->
+        </div>
     }
 }
