--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -35,7 +35,11 @@ body
   background: white;
   margin-left: auto;
   margin-right: auto;
-  width: 90%;
+  width: 95%;
+  text-align: justify;
+}
+th {
+text-align: center !important;
 }
 .container {
   border: 1px solid black;
@@ -109,6 +113,10 @@ input {
   padding-top: 10px;
   background-color:  #f9fafa;
 }
+.search {
+  width: 200px;
+}
+
 .input_form_style {
   float: none;
   border-radius: 4px;
@@ -124,7 +132,6 @@ input {
   font-family: 'Open Sans', sans-serif;
   text-transform: uppercase;
   margin-top: 20px;
-  margin-left: 215px;
   border-radius: 4px;
   border-color: #566473;
   border-width: 2px;
@@ -136,6 +143,11 @@ input {
   font-weight: 600;
   border-style: solid;
   cursor: pointer;
+  float: right;
+}
+.submit-search {
+  height: 33px;
+  font-size: 1.13em;
 }
 #submit-button:hover {
   background-color: #6D7F91;
@@ -171,6 +183,7 @@ textarea {
   padding: 5px;
   font-family: 'Open Sans', sans-serif;
   margin-top: 5px;
+  text-align: justify;
 }
 select {
   border-radius: 4px;
